fix(css): Fix @umbobabo 's comments (border-bottom, spacing)

--- a/index.css
+++ b/index.css
@@ -3,12 +3,6 @@
 @import "@economist/component-grid";
 @import "@economist/component-icon";
 
-.bar-wrapper a, .bar-wrapper a:visited {
-  color: inherit;
-  text-decoration: none;
-  border-bottom: 1px solid var(--color-london);
-}
-
 .bar-wrapper {
   font-family: var(--barwrapper-font-family, var(--fontfamily-body));
   font-size: var(--barwrapper-font-size, var(--text-size-step--2));
@@ -27,9 +21,7 @@
 .bar-wrapper--close-wrapper {
   position: absolute;
   right: var(--barwrapper-close-button-right-spacing, var(--grid-gutter-s));
-
   cursor: pointer;
-
   /* Compensate Icon's white space */
   top: -0.5em;
   right: -0.5em;
